04-kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service  
  namespace: web
spec:
  selector:
    app: nicole
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
