04-kubernetes/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: webapp-service
            port:
              number: 80
        pathType: Exact
  - http:
      paths:
      - path: /webapp
        backend:
          service:
            name: webapp-service
            port:
              number: 80
        pathType: Prefix
